Prepare code to restart project